feat: Ajustes
